<package>
  <name>bond</name>
  <version>1.7.1</version>
  <description brief="bond">

     A bond allows two processes, A and B, to know when the other has
     terminated, either cleanly or by crashing.  The bond remains
     connected until it is either broken explicitly or until a
     heartbeat times out.

  </description>
  <author>Stuart Glaser</author>
  <maintainer email="vrabaud@willowgarage.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/bond</url>

  <build_depend>langs-dev</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
</package>
