<package>
  <name>bond</name>
  <version>1.7.14</version>
  <description>
    A bond allows two processes, A and B, to know when the other has
    terminated, either cleanly or by crashing.  The bond remains
    connected until it is either broken explicitly or until a
    heartbeat times out.
  </description>
  <author>Stuart Glaser</author>
  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/bond</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
