<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bond_core</name>
  <version>1.8.6</version>
  <description>
    A bond allows two processes, A and B, to know when the other has
    terminated, either cleanly or by crashing. The bond remains
    connected until it is either broken explicitly or until a
    heartbeat times out.
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/bond_core</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>
  <author>Stu Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>bond</exec_depend>
  <exec_depend>bondcpp</exec_depend>
  <exec_depend>bondpy</exec_depend>
  <exec_depend>smclib</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
