<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>bondcpp</name>
  <version>1.8.6</version>
  <description>
    C++ implementation of bond, a mechanism for checking when
    another process has terminated.
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/bondcpp</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>
  <author>Stuart Glaser</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend version_gte="0.3.2">cmake_modules</build_depend>

  <depend>bond</depend>
  <depend>libboost-dev</depend>
  <depend>libboost-date-time-dev</depend>
  <depend>libboost-thread-dev</depend>
  <depend>roscpp</depend>
  <depend>smclib</depend>
  <depend>uuid</depend>
</package>
