<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>smclib</name>
  <version>1.8.3</version>
  <description>
    The State Machine Compiler (SMC) from http://smc.sourceforge.net/
    converts a language-independent description of a state machine
    into the source code to support that state machine.

    This package contains the libraries that a compiled state machine
    depends on, but it does not contain the compiler itself.
  </description>
  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
  <license>Mozilla Public License Version 1.1</license>

  <url type="website">http://smc.sourceforge.net/</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>
  <author>Various</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
