<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>smclib</name>
<version>4.0.0</version>
<description>
    The State Machine Compiler (SMC) from http://smc.sourceforge.net/
    converts a language-independent description of a state machine
    into the source code to support that state machine.

    This package contains the libraries that a compiled state machine
    depends on, but it does not contain the compiler itself.
  </description>

  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>Mozilla Public License Version 1.1</license>

  <url type="website">http://smc.sourceforge.net/</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>

  <author email="michael@openrobotics.org">Michael Carroll</author>
  <author>Various</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
  <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
