<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_bond</name>
  <version>1.8.6</version>
  <description>
     Contains tests for [[bond]], including tests for [[bondpy]] and [[bondcpp]].
  </description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/test_bond</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>
  <author>Stuart Glaser</author>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>bondcpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>

  <test_depend>bondpy</test_depend>
  <test_depend>uuid</test_depend>
</package>
