<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_bond</name>
  <version>4.0.0</version>
  <description>
     Contains tests for [[bond]], including tests for [[bondcpp]].
  </description>

  <maintainer email="geoff@openrobotics.org">Geoffrey Biggs</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/test_bond</url>
  <url type="bugtracker">https://github.com/ros/bond_core/issues</url>
  <url type="repository">https://github.com/ros/bond_core</url>

  <author email="michael@openrobotics.org">Michael Carroll</author>
  <author>Stuart Glaser</author>

  <build_depend>ament_cmake</build_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>

  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>bond</test_depend>
  <test_depend>bondcpp</test_depend>
  <test_depend>pkg-config</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclcpp_lifecycle</test_depend>
  <test_depend>uuid</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
